fix: remove preset json

--- a/lumiscan-ui/package.json
+++ b/lumiscan-ui/package.json
@@ -23,7 +23,8 @@
     "recharts": "^3.7.0",
     "three": "^0.182.0",
     "viem": "^2.45.1",
-    "wagmi": "^2.19.5"
+    "wagmi": "^2.19.5",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
